Modif Array->linkedList